# slovo_schedule

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/api/: appointment.py  constants.py  constatnts_new_scruct.py  router.py  schedule.py
backend/api/models/: appointment_models.py  base_models.py  schedule_models.py
backend/app/: bitrix.py  handler.py  main.py  schemas.py  settings.py  utils.py
backend/app/handler/: handler.py  handler_v2.py  interval.py  specialist.py  test_ap.py
backend/app/settings/: __init__.py  bxconstants.py  main.py
backend/src/: description.py  logger.py  middleware.py
backend/src/api/: __init__.py  appointment.py  main.py  production_calendar.py  routing.py  schedule.py  service.py
backend/src/appointplan/: __init__.py  handler.py  routing.py  service.py
backend/src/appointplan/handler/: handler.py  service.py
backend/src/core/: __init__.py  bitrix.py  bxconstants.py  settings.py
backend/src/repetative/: __init__.py  routing.py
backend/src/services/: __init__.py  funcs.py  on_startup.py
backend/src/utils/: __init__.py  batch_builder.py  excract_data.py  funcs.py  interval.py
backend/tests/: conftest.py  test__app.py  test_api.py  test_api_appointment.py  test_api_main.py  test_api_schedule.py  test_appointplan.py  test_repetative.py  test_update_massive.py
backend/tests/manual/: main.py  playground.py
backend/tests/mocks/: _appointplan_1.json  appointplan_2.json  r0.json  repetative_0.json
frontend/: .gitignore  (+7 more)
(+64 files in other folders)
